--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,6 +8,11 @@
 	<title>iameric</title>
 
   <style>
+    /* html, body, #root {
+        height: 100%;
+        overflow: visible;
+        position: relative;
+    } */
     html, body { height: 100%; }
     body { overflow: hidden; }
     #root { display: flex; height: 100%; }
