--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -14,7 +14,7 @@
         position: relative;
     } */
     html, body { height: 100%; }
-    body { overflow: hidden; }
+    body { overflow: hidden;  background-color: '#000';}
     #root { display: flex; height: 100%; }
   </style>
 </head>
