--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -25,5 +25,14 @@
 	</noscript>
 	<div id='root'></div>
     <script type='module' src='app.bundle.js'></script>
+    <!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+        kofiWidgetOverlay.draw('iameric', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support me',
+            'floating-chat.donateButton.background-color': '#00b9fe',
+            'floating-chat.donateButton.text-color': '#fff'
+        })
+    </script> -->
 </body>
 </html>
