--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,7 @@
 
   <style>
     html, body { height: 100%; }
-    body { overflow: hidden;  background-color: '#000';}
+    body { overflow: hidden;  background-color: '#fff';}
     #root { display: flex; height: 100%; }
   </style>
 </head>
