added scroll components; switched to static page layout; added paginated fetch logic to lists; improved chat screen layout and display list.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,8 +8,15 @@
 	<title>iameric</title>
 
   <style>
-    html, body { height: 100%; }
-    body { overflow: hidden;  background-color: '#fff';}
+    html, body {
+        height: 100%;
+        /* min-height: 100%; */
+        margin: 0;
+        padding: 0;
+        overflow: auto;
+        background-color: #fff;
+    }
+    body { overflow: hidden;  background-color: #fff; }
     #root { display: flex; height: 100%; }
   </style>
 </head>
