--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -14,9 +14,9 @@
         margin: 0;
         padding: 0;
         overflow: auto;
-        background-color: #fff;
+        background-color: #000;
     }
-    body { overflow: hidden;  background-color: #fff; }
+    body { overflow: hidden;  background-color: #000; }
     #root { display: flex; height: 100%; }
   </style>
 </head>
