resolved bug in likes logic

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -16,8 +16,12 @@
         overflow: auto;
         background-color: #000;
     }
-    body { overflow: hidden;  background-color: #000; }
-    #root { display: flex; height: 100%; }
+    body { overflow: hidden }
+    #root {
+        display: flex;
+        height: 100%;
+        background-color: #000;
+    }
   </style>
 </head>
 
